[package]
name = "commi-merkle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "commi_merkle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version="0.31.1", features=["init-if-needed"] }
anchor-spl = "0.31.1"
solana-nostd-sha256 = "0.1.3"

